Serach and zoom is working. Work on reviews.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </section>
 
 <!-- modals -->
-<div data-bind="foreach: modalArray">
+<div data-bind="foreach: $root.modalArray">
     <section data-bind="attr: {id: 'modal'+modalName}" class = "modal">
         <section class = "modal-content">
             <section class = "modal-header">
